--- a/app/src/main/res/layout/bottom_sheet_option.xml
+++ b/app/src/main/res/layout/bottom_sheet_option.xml
@@ -104,6 +104,7 @@
                     android:id="@+id/btnOpenWith"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
                     style="@style/Widget.Material3.Button.TonalButton"
                     android:layout_alignParentStart="true"
                     android:text="@string/open_with" />
@@ -183,6 +184,17 @@
                 android:inputType="textNoSuggestions"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"/>
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/outputPathDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="17dp"
+            android:layout_marginTop="2dp"
+            android:ellipsize="start"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall.Emphasized"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnExtract"
