--- a/app/src/main/res/layout/zip_option_dialog.xml
+++ b/app/src/main/res/layout/zip_option_dialog.xml
@@ -138,6 +138,17 @@
                             android:layout_height="wrap_content"
                             android:inputType="textNoSuggestions"/>
                     </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:id="@+id/outputPathDisplay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="3dp"
+                        android:layout_marginTop="2dp"
+                        android:ellipsize="start"
+                        android:maxLines="1"
+                        android:textAppearance="@style/TextAppearance.Material3.BodySmall.Emphasized"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
