--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -44,14 +44,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:visibility="gone"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginBottom="4dp"/>
 
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/progressBar"
+            android:layout_below="@id/storageInfoLayout"
             android:scrollIndicators="none"
             android:scrollbars="none">
 
@@ -64,14 +65,14 @@
                     android:id="@+id/externalStorageChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:layout_marginStart="16dp"
-                    android:elevation="4dp"
+                    android:elevation="0dp"
                     android:clickable="true"
                     android:checkable="false"
                     app:chipIconVisible="true"
                     app:chipIcon="@drawable/ic_change"
-                    app:chipCornerRadius="8dp"
+                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                     android:text="@string/storage"/>
 
                 <com.google.android.material.chip.Chip
@@ -81,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/internal_storage"
                     android:layout_marginStart="5dp"
-                    app:chipCornerRadius="8dp"
+                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                     android:visibility="gone" />
 
                 <com.google.android.material.chip.Chip
@@ -91,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sd_card"
                     android:layout_marginStart="3dp"
-                    app:chipCornerRadius="8dp"
+                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                     android:visibility="gone" />
 
                 <com.google.android.material.chip.Chip
@@ -100,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/root"
-                    app:chipCornerRadius="8dp"
+                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                     android:layout_marginStart="3dp"
                     android:visibility="gone" />
 
@@ -115,32 +116,43 @@
             </LinearLayout>
         </HorizontalScrollView>
 
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/storageInfoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/horizontalScrollView"
-            android:orientation="vertical"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="8dp"
+            android:layout_below="@id/progressBar"
+            style="@style/Widget.Material3.CardView.Elevated"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="3dp"
-            android:visibility="gone">
+            android:layout_marginBottom="4dp"
+            android:elevation="0dp"
+            android:visibility="gone"
+            app:cardCornerRadius="8dp">
 
-            <TextView
-                android:id="@+id/storageInfoText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:layout_marginBottom="4dp"/>
-
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/storageProgressBar"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:trackCornerRadius="4dp"/>
-        </LinearLayout>
+                android:orientation="vertical"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+
+                <TextView
+                    android:id="@+id/storageInfoText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginBottom="4dp"/>
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/storageProgressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:trackCornerRadius="4dp"/>
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/circularProgressBar"
@@ -164,7 +176,7 @@
             android:id="@+id/shimmer_view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/storageInfoLayout"
+            android:layout_below="@id/horizontalScrollView"
             android:layout_marginTop="5dp"
             android:orientation="vertical"
             android:visibility="gone">
@@ -224,8 +236,8 @@
             android:layout_height="match_parent"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/storageInfoLayout">
+            android:layout_marginTop="4dp"
+            android:layout_below="@id/horizontalScrollView">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
