--- a/app/src/main/res/drawable/item_background_2.xml
+++ b/app/src/main/res/drawable/item_background_2.xml
@@ -15,12 +15,13 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Widget.MaterialComponents.Chip.Choice"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:elevation="0dp"
-    android:clickable="true"
-    android:checkable="false"
-    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="?attr/colorSurfaceContainerHighest" />
+    <corners android:radius="8dp" />
+    <padding
+        android:left="0dp"
+        android:top="0dp"
+        android:right="0dp"
+        android:bottom="0dp" />
+</shape>
