--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,9 +4,18 @@
 
 
     <item
+        android:id="@+id/menu_low_storage"
+        android:icon="@drawable/ic_warning"
+        android:title="@string/storage"
+        android:visible="false"
+        android:orderInCategory="2"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/menu_search"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
+        android:orderInCategory="1"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
 
