--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -43,6 +43,7 @@
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
                 android:text="@string/compress_sevenz"/>
 
             <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -58,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/low_storage_warning"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="?attr/colorError"
                 android:layout_marginBottom="8dp"
                 android:visibility="gone"/>
 
@@ -67,8 +68,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:cornerRadius="10dp"
-                style="@style/Widget.Material3.Button.TonalButton"
+                android:elevation="0dp"
+                style="@style/Widget.Material3.Button.ElevatedButton"
                 android:text="@string/show_hide_selected_files" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -219,7 +220,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="@string/automatic_threads_warning"
-                        android:textColor="@android:color/holo_red_dark"
+                        android:textColor="?attr/colorError"
                         android:visibility="gone"/>
 
                     <TextView
