--- a/app/src/main/res/layout/tar_option_dialog.xml
+++ b/app/src/main/res/layout/tar_option_dialog.xml
@@ -44,6 +44,7 @@
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:layout_gravity="center"
                 android:text="@string/compress_tar"/>
 
             <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -59,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/low_storage_warning"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="?attr/colorError"
                 android:layout_marginBottom="8dp"
                 android:visibility="gone"/>
 
@@ -68,8 +69,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:cornerRadius="10dp"
-                style="@style/Widget.Material3.Button.TonalButton"
+                android:elevation="0dp"
+                style="@style/Widget.Material3.Button.ElevatedButton"
                 android:text="@string/show_hide_selected_files" />
 
             <androidx.recyclerview.widget.RecyclerView
