--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -158,7 +158,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/low_storage_warning"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="?attr/colorError"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
