--- a/app/src/main/res/layout/fragment_seven_zip.xml
+++ b/app/src/main/res/layout/fragment_seven_zip.xml
@@ -30,6 +30,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
             android:minHeight="?attr/actionBarSize"/>
     </com.google.android.material.appbar.AppBarLayout>
 
